--- a/greencode/css/utilities.css
+++ b/greencode/css/utilities.css
@@ -27,26 +27,33 @@
 }
 
 /* Font Size */
-.text-lg	{
-  font-size: 1.125rem; /* 18px */
-  line-height: 1.75rem; /* 28px */
+.text-lg {
+  font-size: 1.125rem;
+  /* 18px */
+  line-height: 1.75rem;
+  /* 28px */
 }
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -56,64 +63,71 @@
 .font-normal {
   font-weight: 400;
 }
+
 .font-medium {
   font-weight: 500;
 }
 
 /* Margin */
-.mx-auto	{
+.mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.mb-0	{
+.mb-0 {
   margin-bottom: 0;
 }
 
-.mx-2	{
+.mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
-.my-2	{
+
+.my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
-.m-4	{
+.m-4 {
   margin: 1rem;
 }
-.mx-4	{
+
+.mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
 }
-.my-4	{
+
+.my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
 .mt-4 {
   margin-top: 1rem;
 }
 
-.my-6	{
+.my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
-.mt-6	{
+
+.mt-6 {
   margin-top: 1.5rem;
 }
 
-.mt-8	{
+.mt-8 {
   margin-top: 2rem;
 }
-.mb-8	{
+
+.mb-8 {
   margin-bottom: 2rem;
 }
 
-.mt-16	{
+.mt-16 {
   margin-top: 4rem;
 }
 
-.mt-20	{
+.mt-20 {
   margin-top: 5rem;
 }
 
@@ -125,17 +139,21 @@
 .p-0 {
   padding: 0px;
 }
+
 .pb-0 {
   padding-bottom: 0px;
 }
-.p-4	{
+
+.p-4 {
   padding: 1rem;
 }
-.px-4	{
+
+.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.py-4	{
+
+.py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -170,11 +188,11 @@
   flex-direction: column;
 }
 
-.items-center	{
+.items-center {
   align-items: center;
 }
 
-.justify-center	{
+.justify-center {
   justify-content: center;
 }
 
@@ -189,6 +207,7 @@
 .grow {
   flex-grow: 1;
 }
+
 .basis-0 {
   flex-basis: 0;
 }
@@ -204,19 +223,32 @@
 }
 
 .max-w-2xl {
-  max-width: 42rem; /* 672px */
-}	
+  max-width: 42rem;
+  /* 672px */
+}
+
 .max-w-3xl {
-  max-width: 48rem; /* 768px */
-}	
+  max-width: 48rem;
+  /* 768px */
+}
+
 .max-w-full {
   max-width: 100%;
+}
+
+/* Height */
+.max-h-80 {
+  max-height: 20rem; /* 320px */
+}
+.max-h-96 {
+  max-height: 24rem; /* 384px */
 }
 
 /* Borders */
 .rounded-sm {
   border-radius: 0.25rem;
 }
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
